# xmr-bridge

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  bridge.py  config.example.toml  config.py  database.py  docker-compose-secretvm.yaml  example.py  main.py  monero_monitor.py  monero_wallet.py  pyproject.toml  requirements.txt  secret_client.py  wallet.py
.github/workflows/: docker-build-secretvm.yml
api/: README.md  __init__.py  dependencies.py  main.py  models.py
api/routes/: deposits.py  websocket.py  withdrawals.py
core/: __init__.py  errors.py  types.py
frost/: __init__.py  coordinator.py  participant.py
monero/: __init__.py  deposit_monitor.py  node.py  withdrawal.py
network/: __init__.py  p2p.py
secret/: __init__.py  client.py
