[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmr-bridge"
version = "0.1.0"
description = "Monero to Secret Network MPC Bridge"
authors = [
    {name = "XMR Bridge Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "py-frost>=0.1.0",  # FROST threshold signatures
    "py-libp2p>=0.1.0",  # P2P networking
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
xmr-bridge = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "monero", "frost", "network", "secret"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
